tests/lean/1102.lean.expected.out
1102.lean:22:35-22:49: error: failed to synthesize instance
  DVR 1
